# decmani_sim

./: requirements.txt
arm_robot_py/: package.xml  setup.py
arm_robot_py/arm_robot_py/: arm_robot_py.py  wx250_robot.py
arm_robot_py/launch/: arm_robot.launch.py
coord_trans_py/coord_trans_py/: coord_trans_py.py  object_point_from_robot.txt
detectron2_py/detectron2_py/: bbox_py.py  detectron2_py.py
sim_gazebo/: CMakeLists.txt  package.xml
sim_gazebo/config/: wx250_controllers.yaml
sim_gazebo/launch/: spawn_robot.launch.py  spawn_robot_moveit.launch.py
sim_gazebo/urdf/: wx250_gz.urdf.xacro
sim_gazebo/worlds/: decmani_world.sdf
wx250_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
wx250_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  wx250.ros2_control.xacro  wx250.srdf  wx250.urdf  wx250.urdf.xacro
wx250_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
